# Floresta

./: CLAUDE.md  Cargo.toml
crates/floresta-backup/: Cargo.toml
crates/floresta-backup/docs/: INTEGRATION_DIAGRAM.md  TECHNICAL_REQUIREMENTS.md
crates/floresta-backup/examples/: extract_real_wallet.rs
crates/floresta-backup/src/: cbor.rs  crypto.rs  envelope.rs  error.rs  extractor.rs  importer.rs  lib.rs  types.rs  validation.rs
crates/floresta-backup/tests/: integration.rs  roundtrip.rs  vectors.rs  wallet_integration.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  server.rs
crates/floresta-rpc/src/: rpc.rs  rpc_types.rs
crates/floresta-watch-only/src/: kv_database.rs  lib.rs  memory_database.rs
doc/: running-tests.md
doc/rpc/: getwalletinfo.md  listaddresses.md  listdescriptors.md  listtransactions.md  listunspent.md  loaddescriptor.md  removedescriptor.md
scripts/: query_wallet.py
tests/floresta-cli/: descriptors.py
tests/test_framework/rpc/: floresta.py
